2007-12-03 Braden McDaniel  <braden@endoframe.com>

	Prefer Phoenix forms to Spirit actors.

	* src/libopenvrml/openvrml/basetypes.cpp
	(openvrml::operator>>(std::istream &, color &)): Use Phoenix
	instead of actors.
	(openvrml::operator>>(std::istream &, color_rgba &)): Use Phoenix
	instead of actors.
	(openvrml::operator>>(std::istream &, vec2f &)): Use Phoenix
	instead of actors.
	(openvrml::operator>>(std::istream &, vec2d &)): Use Phoenix
	instead of actors.
	(openvrml::operator>>(std::istream &, vec3f &)): Use Phoenix
	instead of actors.
	(openvrml::operator>>(std::istream &, vec3d &)): Use Phoenix
	instead of actors.
	(openvrml::operator>>(std::istream &, rotation &)): Use Phoenix
	instead of actors.
	(openvrml::operator>>(std::istream &, mat4f &)): Use Phoenix
	instead of actors.
	(openvrml::operator>>(std::istream &, quatf &)): Use Phoenix
	instead of actors.
	(openvrml::operator>>(std::istream &, image &)): Use Phoenix
	instead of actors.

2007-11-30 Braden McDaniel  <braden@endoframe.com>

	* src/Makefile.am (openvrml_xembed_openvrml_xembed_LDFLAGS):
	GL_LIBS should be sufficient.

2007-11-30 Braden McDaniel  <braden@endoframe.com>

	* README: Removed obsolete documentation for
	HAVE_APPLE_OPENGL_FRAMEWORK preprocessor symbol.

2007-11-30 Braden McDaniel  <braden@endoframe.com>

	* src/Makefile.am (openvrml_xembed_openvrml_xembed_LDFLAGS):
	Explicitly add GLU_LIBS here because libtool will not propagate
	the -dylib_file flag needed by Mac OS X 10.5.

2007-11-30 Braden McDaniel  <braden@endoframe.com>

	Use AX_CHECK_GLU to establish GL_CFLAGS, GL_LIBS when configuring
	gtkglext.

	* lib/gtkglext/Makefile.am (ACLOCAL_AMFLAGS): Look in openvrml's
	macro subdirectory.
	* lib/gtkglext/configure.in: Replaced OpenGL detection for X11 with
	AX_CHECK_GLU.

2007-11-30 Braden McDaniel  <braden@endoframe.com>

	Updated AX_CHECK_GL and AX_CHECK_GLU macros to provide more robust
	support for Mac OS X; particularly Mac OS X 10.5.
